2002-02-16  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/mol.cpp (PerceiveBonds): Improve accuracy by picking the
	closer atom (shorter bond) when there are two atoms with equal
	electronegativities.
	
2002-02-14  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/data.h, src/data.cpp: Add MIME support to OBExtensionTable.

	* src/extable.txt, src/extable.h: As above (using as much from the
	current Chemical MIME page as possible).

	* src/mol.h, src/mol.cpp (PerceiveBonds): Add preliminary support
	for assigning bond orders based on Roger Sayle's "Cruft to
	Content" algorithm. Still needs functional group and aromatic ring
	recognition passes.
	<http://www.daylight.com/meetings/mug01/Sayle/m4xbondage.html>

	* src/mopac.cc: Fix bugs in read/write methods as pointed out by
	Radek Liboska. Should solve PR #515884.

	* src/atom.cpp (GetType): Fix bug with atom typing by assigning
	the ATN type of an atom if the atom typer didn't pick one before.

	* src/gamess.cpp, src/xyz.cpp, src/unichem.cpp, src/ghemical.cpp:
	Don't try to translate atom types as this causes problems. (Works
	cleanly now that the GetType() bug is fixed.)
	
2002-02-13  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/data.cpp, src/data.h, src/element.txt: Added support for
	electronegativity of elements. (Needed for assigning bond types,
	among other things.)

	* src/element.h: Regenerate using bin2hex.pl.

	* src/ghemical.cpp: Don't try to type atoms, it only causes
	problems with the internal atom typing.

2002-02-07  Geoff Hutchison  <hutchisn@chem.northwestern.edu>
	
	* src/Makefile.in: Add c3d.cpp to the compilation list.

	* src/obutil.cpp: Migrate quat.c code here temporarily.
	
	* src/mol.cpp, src/mol.h: Resolve problems with declarations of
	old quat.c code since they now fall under OpenBabel namespace.

2002-02-01  Michael Banck  <mbanck@gmx.net>

	* test/Makefile.in, src/Makefile.in: Delete Makefile when calling
	distclean target.
